--- a/Makefile.tim
+++ b/Makefile.tim
@@ -95,4 +95,4 @@ iso/week2/back.arc: iso/week2/back0.tim iso/week2/back1.tim iso/week2/back2.tim
 iso/week3/back.arc: iso/week3/back0.tim iso/week3/back1.tim iso/week3/back2.tim iso/week3/back3.tim iso/week3/back4.tim 
 
 # Trio Stage
-iso/trio/back.arc: iso/trio/back0.tim iso/trio/back1.tim iso/trio/back2.tim iso/trio/back3.tim iso/trio/back4.tim iso/trio/back5.tim iso/trio/back6.tim 
+iso/trio/back.arc: iso/trio/back0.tim iso/trio/back1.tim iso/trio/back2.tim iso/trio/back3.tim iso/trio/back4.tim iso/trio/back5.tim iso/trio/back6.tim iso/trio/back7.tim iso/trio/back8.tim iso/trio/back9.tim iso/trio/back10.tim 
