--- a/Makefile_disc2
+++ b/Makefile_disc2
@@ -62,6 +62,7 @@ LDFLAGS += -lcd
 LDFLAGS += -lds
 LDFLAGS += -letc
 LDFLAGS += -lgpu
+LDFLAGS += -lgcc
 #LDFLAGS += -lgs
 #LDFLAGS += -lgte
 #LDFLAGS += -lgun
