--- a/Makefile_disc2
+++ b/Makefile_disc2
@@ -11,6 +11,7 @@ SRCS = src/main.c \
        src/menu.c \
        src/stage.c \
 	src/event.c \
+       src/events.c \
        src/debug.c \
        src/save.c \
        src/psx.c \
